# telegram_bot_api_parser

./: .gitignore  Cargo.toml  README.md
html/: api.html
src/: api_parser.rs  code_writer.rs  main.rs  util.rs
src/api_parser/: bot_api_parser.rs  mod.rs  scraper.rs  tables.rs  type_parser.rs
src/cli/: api_parser_arguments.rs  mod.rs
src/code_generator/: api.rs  code_generator.rs  configuration_reader.rs  mod.rs  names.rs  renderer.rs  resolve_strategy.rs  resolver.rs  target_files.rs  target_files_map.rs
src/code_generator/api/: dto.rs  field.rs  method.rs  mod.rs  parameter.rs
src/code_generator/code_writer/: code_writer.rs  mod.rs
src/code_generator/template/: api.rs  configuration.rs  configuration_reader.rs  mod.rs  objects.rs  render.rs  resolve_strategy.rs  resolver.rs  template.rs  template_code_generation_error.rs  template_code_generator.rs  template_file.rs  template_listing.rs  template_reader.rs  template_resolver.rs
src/code_generator/template/objects/: mod.rs  template_bot_dto.rs  template_dto_field.rs
src/code_generator/template/strategy/: file_strategy.rs  mod.rs
src/code_generator/template/validation/: array_template_validator_rule.rs  mod.rs  validator.rs  (+2 more)
src/raw_api/: bot_dto.rs  dto.rs  dto_field.rs  field_type.rs  mod.rs  raw_dto.rs  raw_field.rs  raw_method.rs  raw_parameter.rs  telegram_bot_api_raw.rs  type_descriptor.rs
src/test_support/: mod.rs
src/util/: mod.rs
templates/: configuration.json  templates.json
templates/rust/: mod.txt  mod_dto.txt  mod_method.txt  struct.txt  struct_dto.txt  struct_method.txt
