[package]
name = "telegram_bot_api_parser"
version = "0.1.0"
authors = ["Warhorst <46809804+Warhorst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
handlebars = "3.0.1"
regex = "1.3.5"
clap = "3.0.0-beta.1"